web-infras/parser/tests/fixtures/babel/es2015/class-methods/disallow-static-generator-prototype/output.txt
[SyntaxError]: Classes may not have static property named prototype. (2,11)
2|  static *prototype() {}
 |         ^
